--- a/BinarySynapticWeights/BinarySynapticWeights.csproj
+++ b/BinarySynapticWeights/BinarySynapticWeights.csproj
@@ -49,6 +49,7 @@
     <Compile Include="OutputNode.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Sample.cs" />
+    <Compile Include="SerialCoding.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
