--- a/BinarySynapticWeightsPointsApplication/BinarySynapticWeightsPointsApplication.csproj
+++ b/BinarySynapticWeightsPointsApplication/BinarySynapticWeightsPointsApplication.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Stroke.cs" />
     <Compile Include="Preprocessing.cs" />
     <Compile Include="TrainingSets.cs" />
     <Compile Include="UI.cs">
