--- a/BinarySynapticWeights/BinarySynapticWeights.csproj
+++ b/BinarySynapticWeights/BinarySynapticWeights.csproj
@@ -41,9 +41,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="NeuralNetworkTrainingAlgorithm.cs" />
+    <Compile Include="BSWTrainingAlgorithm.cs" />
+    <Compile Include="Contracts\IBSWNeuralNetwork.cs" />
+    <Compile Include="Contracts\IBSWTrainingAlgorithm.cs" />
+    <Compile Include="Entities\Model.cs" />
     <Compile Include="HammingDistance.cs" />
-    <Compile Include="BSWModel.cs" />
+    <Compile Include="BSWNeuralNetwork.cs" />
     <Compile Include="Nodes\HiddenNode.cs" />
     <Compile Include="SynapticLinks\HiddenToOutputSynapticLink.cs" />
     <Compile Include="Nodes\InputNode.cs" />
@@ -51,7 +54,7 @@
     <Compile Include="Nodes\ThresholdNode.cs" />
     <Compile Include="Nodes\OutputNode.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Sample.cs" />
+    <Compile Include="Entities\Sample.cs" />
     <Compile Include="SerialCoding.cs" />
     <Compile Include="Vectors.cs" />
   </ItemGroup>
