--- a/BinarySynapticWeights.FeatureExtraction/BinarySynapticWeights.FeatureExtraction.csproj
+++ b/BinarySynapticWeights.FeatureExtraction/BinarySynapticWeights.FeatureExtraction.csproj
@@ -42,8 +42,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Contracts\IStroke.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="CenterOfGravity.cs" />
+    <Compile Include="Stroke.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
