--- a/BinarySynapticWeights.FeatureExtraction/BinarySynapticWeights.FeatureExtraction.csproj
+++ b/BinarySynapticWeights.FeatureExtraction/BinarySynapticWeights.FeatureExtraction.csproj
@@ -34,17 +34,20 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Numerics" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
+    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Contracts\IStroke.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="CenterOfGravity.cs" />
+    <Compile Include="RayIntersection.cs" />
     <Compile Include="Stroke.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
