--- a/BinarySynapticWeights.FeatureExtraction/BinarySynapticWeights.FeatureExtraction.csproj
+++ b/BinarySynapticWeights.FeatureExtraction/BinarySynapticWeights.FeatureExtraction.csproj
@@ -44,6 +44,8 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Entities\ShapeFeatures.cs" />
+    <Compile Include="FeatureExtraction.cs" />
     <Compile Include="Contracts\IStroke.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="CenterOfGravity.cs" />
