Renamed solution to ShapeRecognition

--- a/ShapeRecognition.UI/ShapeRecognition.UI.csproj
+++ b/ShapeRecognition.UI/ShapeRecognition.UI.csproj
@@ -6,8 +6,8 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{8FCB1BB8-43E0-4F4C-AC90-8989C51C6E77}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>BinarySynapticWeightsPointsApplication</RootNamespace>
-    <AssemblyName>BinarySynapticWeightsPointsApplication</AssemblyName>
+    <RootNamespace>ShapeRecognition.UI</RootNamespace>
+    <AssemblyName>ShapeRecognition.UI</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -82,9 +82,9 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\BinarySynapticWeights.FeatureExtraction\BinarySynapticWeights.FeatureExtraction.csproj">
+    <ProjectReference Include="..\ShapeRecognition.FeatureExtraction\ShapeRecognition.FeatureExtraction.csproj">
       <Project>{471af05f-d633-4168-8e0f-52f57afdea9d}</Project>
-      <Name>BinarySynapticWeights.FeatureExtraction</Name>
+      <Name>ShapeRecognition.FeatureExtraction</Name>
     </ProjectReference>
     <ProjectReference Include="..\BinarySynapticWeights\BinarySynapticWeights.csproj">
       <Project>{b28487d9-8005-48e2-bfef-1a90e2315299}</Project>
