--- a/ShapeRecognition.FeatureExtraction/ShapeRecognition.FeatureExtraction.csproj
+++ b/ShapeRecognition.FeatureExtraction/ShapeRecognition.FeatureExtraction.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{471AF05F-D633-4168-8E0F-52F57AFDEA9D}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>BinarySynapticWeights.FeatureExtraction</RootNamespace>
-    <AssemblyName>BinarySynapticWeights.FeatureExtraction</AssemblyName>
+    <RootNamespace>ShapeRecognition.FeatureExtraction</RootNamespace>
+    <AssemblyName>ShapeRecognition.FeatureExtraction</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
