--- a/Tests/ShapeRecognition.FeatureExtraction.UnitTests/ShapeRecognition.FeatureExtraction.UnitTests.csproj
+++ b/Tests/ShapeRecognition.FeatureExtraction.UnitTests/ShapeRecognition.FeatureExtraction.UnitTests.csproj
@@ -8,8 +8,8 @@
     <ProjectGuid>{2501616C-C423-4317-9734-0A784406D940}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>BinarySynapticWeights.FeatureExtraction.UnitTests</RootNamespace>
-    <AssemblyName>BinarySynapticWeights.FeatureExtraction.UnitTests</AssemblyName>
+    <RootNamespace>ShapeRecognition.FeatureExtraction.UnitTests</RootNamespace>
+    <AssemblyName>ShapeRecognition.FeatureExtraction.UnitTests</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -67,9 +67,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\BinarySynapticWeights.FeatureExtraction\BinarySynapticWeights.FeatureExtraction.csproj">
+    <ProjectReference Include="..\..\ShapeRecognition.FeatureExtraction\ShapeRecognition.FeatureExtraction.csproj">
       <Project>{471af05f-d633-4168-8e0f-52f57afdea9d}</Project>
-      <Name>BinarySynapticWeights.FeatureExtraction</Name>
+      <Name>ShapeRecognition.FeatureExtraction</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
